--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <style>
       body{ -ms-overflow-style: none; } 
       ::-webkit-scrollbar { display: none; }
+      * {
+        font-family: IBM Plex Sans KR;
+      }
     </style>
 
     <!--
