--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,11 @@
     <!-- 스타일 리셋 -->
     <link rel="stylesheet" href="reset.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300&display=swap" rel="stylesheet">
     <style>
       body{ -ms-overflow-style: none; } 
       ::-webkit-scrollbar { display: none; }
       * {
-        font-family: IBM Plex Sans KR;
+        transition: all 0.5s;      
       }
     </style>
 
