--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,10 @@
     <link rel="stylesheet" href="reset.css" />
 
     <style>
-      body{ -ms-overflow-style: none; } 
+      body{ 
+        -ms-overflow-style: none; 
+        margin: 0;
+      } 
       ::-webkit-scrollbar { display: none; }
       * {
         transition: all 0.5s;      
